# TeensyStripController

./: README.md  platformio.ini
macos_controller/: CMakeLists.txt  README.md
macos_controller/src/: main.cpp  teensy_controller.cpp  teensy_controller.h
src/: main.cpp
